All methods moved in UserMethods class and some modification in UserMethods class also handle some exceptions